<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/home_background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/list_icon"
            android:layout_centerVertical="true"
            />


    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/allerta"
                    android:text="@string/headding"
                    android:textColor="#000000"
                    android:layout_centerHorizontal="true"
                    android:textSize="28sp"

                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@color/card1"
                        android:elevation="8dp"
                        android:layout_margin="10dp"
                        >

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/profile_logo"
                            android:layout_centerInParent="true"



                            />

                    </RelativeLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"

                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@color/card2"
                        android:elevation="8dp"
                        android:layout_margin="10dp"
                        >

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/medical_history_logo"
                            android:layout_centerInParent="true"



                            />

                    </RelativeLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/medicalHistory"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"

                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@color/card3"
                        android:elevation="8dp"
                        android:layout_margin="10dp"
                        >

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ec_logo"
                            android:layout_centerInParent="true"



                            />

                    </RelativeLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/emergencyContact"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"

                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@color/card4"
                        android:elevation="8dp"
                        android:layout_margin="10dp"
                        >

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/emergency_logo"
                            android:layout_centerInParent="true"



                            />

                    </RelativeLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/emergency"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"

                        />
                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:background="@color/banner_background_light"

                >
                <LinearLayout
                    android:id="@+id/featured_background"
                    android:layout_width="170dp"
                    android:layout_height="280dp"
                    android:background="@color/banner_background"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:text="@string/updates"
                        android:textColor="#E6373535"
                        android:layout_marginTop="50dp"
                        android:textAllCaps="true"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/allerta"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/updatesDesc"
                        />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/featured_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_toRightOf="@+id/featured_background"
                    android:background="@color/home_background" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/youralerts"
                        android:fontFamily="@font/allerta"
                        android:textColor="#E6373535"
                        android:textSize="20sp"
                        android:textAllCaps="true"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="20dp"
                    android:elevation="8dp"
                    android:background="@color/banner_background_last"
                    >
                    <ImageView
                        android:layout_marginHorizontal="10dp"
                        android:id="@+id/recentTransactionLogo"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/resent_alerts_logo"
                        android:layout_centerVertical="true"
                        />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:text="@string/veiwRecentAlerts"
                        android:layout_toRightOf="@+id/recentTransactionLogo"
                        android:fontFamily="@font/allerta"
                        />



                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</LinearLayout>